# ITMO

./: README.md  eren.py  lab3AC.xlsx  ls  proxyShop.ods  titile.docx  web4Arch.ods
1sem/OPD/: 4  4_errors  lab0Ot.odt  lab0Ot.pdf.docx  lab0Ot.pdf.odt  ls Rl grep l ls Rl grep.txt  script
1sem/history/: Рахматов Нематджон Реферат1.docx  Рахматов Нематджон Реферат2.docx  Рахматов Нематджон. Эссе(Сина).docx  Рахматов Нематджон. Эссе_2.docx  Рецензия - 1. Рахматов Н.odt  Рецензия - 2. Рахматов Н.odt
1sem/informatika/: Aннотация Рахматов Неъматджон.docx  Aннотация №1 Рахматов Неъматджон.docx  Aннотация №2 Рахматов Неъматджон.docx  Aннотация №3 Рахматов Неъматджон.docx  Aннотация №4 Рахматов Неъматджон.docx  Aннотация №6 Рахматов Неъматджон.docx  ~$1lab.odt  ~$нотация №2 Рахматов Неъматджон.docx
1sem/math/: Задача1.Метод математической индукции.docx  ргр лг1.xlsx  ргр лг2.rtf  ргр лг3.rtf
1sem/proga/: lab3doc.odt  lamda.java  shpora
1sem/дм/: ДзKuchizu.docx  дз1.docx  дз2.docx  дз3.docx  дз4.docx  дз5.docx  дз6 Рахматов.docx  дз7Рахматов2.docx  дз8_Рахматов.docx
2sem/BD/: 2  bdLab1.odt  bdLab2.odt
2sem/opd/: -5698  4  Lab3_opd.odt
2sem/БЖД/: 2lab_sleep.docx  (+4 more)
3sem/pl/lab3/: CMakeLists.txt
3sem/pl/lab3/include/: image.h  status.h
3sem/pl/lab3/src/: bmp.c  image.c  main.c
3sem/pl/lab3/src/inc/: image.h  status.h
3sem/pl/lab4/: CMakeLists.txt
3sem/pl/lab4/src/: main.c  mem.c  mem_internals.h  test.c  test.h
5sem/OS/lab2/: CMakeLists.txt  compare.h  lab2_cache.cpp  lab2_cache.h  lab2_cache_exe.cpp  lab2_cache_exe.h  main.cpp
shelter/: api.py  main.py
(+2024 files in other folders)
